--- a/ExceptionTransformTests.csproj
+++ b/ExceptionTransformTests.csproj
@@ -9,4 +9,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ExceptionRewriter\ExceptionFilterSupport\ExceptionFilterSupport.csproj" />
+  </ItemGroup>
+
 </Project>
